# agent_german_learning_app

german_learning_game/: .env.example  README.md  __init__.py  agents.py  enhanced_agents.py  events.py  game_manager.py  models.py  pyproject.toml  web_app.py
german_learning_game/config/: llm_config.yaml  prompts.yaml
german_learning_game/llm/: base.py
